fix(web): overflow hidden in header

--- a/packages/web/pages/about/about-us.css
+++ b/packages/web/pages/about/about-us.css
@@ -14,7 +14,7 @@ main {
 
 #banner {
   width: 100%;
-  height: 100vh;
+  height: 46rem;
 
   background: linear-gradient(-45deg, var(--dark-900), var(--dark-800), var(--dark-750), var(--dark-700));
   
